Fix image scaling issues when image has only one dimension smaller than the limit (#1489274) Other small code improvements.

--- a/skins/classic/addressbook.css
+++ b/skins/classic/addressbook.css
@@ -357,7 +357,8 @@ body.iframe,
 }
 
 #contactpic img {
-	width: 60px;
+	max-width: 60px;
+	max-height: 80px;
 }
 
 #contactpic.droptarget.hover {
